--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
             <meta http-equiv="X-UA-Compatible" content="IE-dge">
             <meta name="Viewport" content="width=device-width", initial-scale="1.0">
             <title>Janryll Ladao Portfolio</title>
-            <link rel="icon" type="image/png" sizes="16x16" href="Images/LOGO.png">
+            <link rel="icon" type="image/png" sizes="16x16" href="Images/logo.png">
             <link rel="stylesheet" href="Style.Css">
             <script src="https://kit.fontawesome.com/a8cf530112.js" crossorigin="anonymous"></script>
             <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -159,35 +159,35 @@
            <div class="worklist">
                 <div class="work">
                         <video autoplay loop muted plays-inline class="video">
-                                <source src="images/Work-1.mp4" type="video/mp4">
+                                <source src="Images/Work-1.mp4" type="video/mp4">
                         </video>                     
                         <div class="layer">
                                 <h3>Video Editing</h3>
                                 <p></p>
-                                <a href="https://drive.google.com/drive/folders/1B6m2CBtQcIJaet8fFvpmZXZCPu0_tkDl?usp=sharing"
+                                <a href="https://drive.google.com/drive/folders/1O4sDwYhWm-DGOMuKY4aU8kVB12hvblXw?usp=sharing"
                                 target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                         </div>
                 </div>
                 <div class="work">
                         <video autoplay loop muted plays-inline class="video">
-                                <source src="images/Work-2.mp4" type="video/mp4">
+                                <source src="Images/Work-2.mp4" type="video/mp4">
                         </video>
                         <div class="layer">
                                 <h3>Graphic Designing / Digital Art</h3>
                                 <p></p>
-                                <a href="https://drive.google.com/drive/folders/1JFcISmQOUQdbAZyxS_LXM7NEBwBy2zRH?usp=sharing"
+                                <a href="https://drive.google.com/drive/folders/1O4sDwYhWm-DGOMuKY4aU8kVB12hvblXw?usp=sharing"
                                 target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                         </div>
                 </div>
                 <div class="work">
                         <video autoplay loop muted plays-inline class="video">
-                                <source src="images/Work-3.mp4" type="video/mp4">
+                                <source src="Images/Work-3.mp4" type="video/mp4">
                         </video>
                         
                         <div class="layer">
                                 <h3>Social Media Managing</h3>
                                 <p></p>
-                                <a href="https://drive.google.com/drive/folders/1WOSootuXfk_7rJ6ee9RRWASIvnI_QP4V?usp=sharing"
+                                <a href="https://drive.google.com/drive/folders/1uJSN6hImZcG9gJ3FrJ9reJf20VLS8kod?usp=drive_link"
                                 target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                         </div>
                 </div>
