--- a/index.html
+++ b/index.html
@@ -201,16 +201,16 @@
                 <div class="row">
                         <div class="contact-left">
                                 <h1 class="sub-title">Contact Me</h1>
-                                <p><i class="fa-solid fa-paper-plane"></i>paulbatan4@gmail.com</p>
-                                <p><i class="fa-solid fa-square-phone"></i>0912 875 0538</p>
+                                <p><i class="fa-solid fa-paper-plane"></i>ladaojanryll@gmail.com</p>
+                                <p><i class="fa-solid fa-square-phone"></i>09810806403</p>
                                 <div class="social-icons">
-                                        <a href="https://www.facebook.com/suzukiautopanaypaulbatan"
+                                        <a href="https://www.facebook.com/profile.php?id=61551507353135"
                                         target="_blank"><i class="fa-brands fa-facebook"></i></a>
-                                        <a href="" 
+                                        <a href="https://twitter.com/Janryll07?fbclid=IwAR3qfj3-EZZeTl6tHsORSHIElzPy4cffexMfr0WkthxejFeX8cPntlJiQcM" 
                                         target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
                                         <a href=""
                                         target="_blank"><i class="fa-brands fa-instagram"></i></a>
-                                        <a href=""
+                                        <a href="https://www.linkedin.com/in/janryll-ladao-220a57298/?fbclid=IwAR2qPpwwTaZ3saHrOUVX5RkAaMjxznwB012DGMb_GqBrs7nSWiyPXOHi61c#09810806403"
                                         target="_blank"><i class="fa-brands fa-linkedin"></i></a>
                                 </div>
                                 <a href="Images" download class="btn btn2"
