--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                         <div class="layer">
                                 <h3>Graphic Designing / Digital Art</h3>
                                 <p></p>
-                                <a href="https://drive.google.com/drive/folders/1O4sDwYhWm-DGOMuKY4aU8kVB12hvblXw?usp=sharing"
+                                <a href="https://drive.google.com/drive/folders/1WxnrOh2pDMx_pRZph1zgc1bc8Dui_dsx?usp=sharing"
                                 target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                         </div>
                 </div>
@@ -187,7 +187,7 @@
                         <div class="layer">
                                 <h3>Social Media Managing</h3>
                                 <p></p>
-                                <a href="https://drive.google.com/drive/folders/1uJSN6hImZcG9gJ3FrJ9reJf20VLS8kod?usp=drive_link"
+                                <a href="https://drive.google.com/drive/folders/1uJSN6hImZcG9gJ3FrJ9reJf20VLS8kod?usp=sharing"
                                 target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                         </div>
                 </div>
@@ -208,12 +208,12 @@
                                         target="_blank"><i class="fa-brands fa-facebook"></i></a>
                                         <a href="https://twitter.com/Janryll07?fbclid=IwAR3qfj3-EZZeTl6tHsORSHIElzPy4cffexMfr0WkthxejFeX8cPntlJiQcM" 
                                         target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
-                                        <a href=""
+                                        <a href="https://www.instagram.com/janryll_media/?fbclid=IwAR1LLRS6exm5fSzr7ftZJETirr9i4uJT-uJQM9e1X3gmeN9067l21NLyGKw"
                                         target="_blank"><i class="fa-brands fa-instagram"></i></a>
                                         <a href="https://www.linkedin.com/in/janryll-ladao-220a57298/?fbclid=IwAR2qPpwwTaZ3saHrOUVX5RkAaMjxznwB012DGMb_GqBrs7nSWiyPXOHi61c#09810806403"
                                         target="_blank"><i class="fa-brands fa-linkedin"></i></a>
                                 </div>
-                                <a href="Images" download class="btn btn2"
+                                <a href="Images/LADAO CV.pdf" download class="btn btn2"
                                 target="_blank">Download CV</a>
                         </div>
                         <div class="contact-right">
@@ -259,7 +259,7 @@
    </script>
    <script>
         const scriptURL =
-         'https://script.google.com/macros/s/AKfycbzNhYvaj10UN9ObDJBJjtpra8qy4TR7KQaqSGpmy4pbyF5MOJo9PWZIxSXlY8o9VjTb/exec'
+         'https://script.google.com/macros/s/AKfycbwqJL_fW1pjHPaUP8u6nFNfKlQG7Oinv8sEg8jcsJI1jQ2kwu0BN4Jd3-JzlNsQ60UtEw/exec'
         const form = document.forms['submit-to-google-sheet']
         const msg = document.getElementById("msg")
       
